--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,31 @@
     padding: 0.5em;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
+.contents {
+    border: 1px solid aquamarine;
+    display: flex;
+    flex-direction: row;
+}
+
+.contentsBox {
+    display: flex;
+    width: 33%;
+    justify-content: center;
+    /* font-size: 2em;
+    margin: 1em; */
+    padding: 0.5em;
+    border: 1px solid blueviolet;
+}
+
+.contentsColumns {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+a {
+    text-decoration: none;
+}
